--- a/deep-learning-with-python-by-francois-chollet/11-deep-learning-for-text/01_words_representing_approach_sets_and_sequences.ipynb
+++ b/deep-learning-with-python-by-francois-chollet/11-deep-learning-for-text/01_words_representing_approach_sets_and_sequences.ipynb
@@ -6,7 +6,7 @@
       "name": "01-words-representing-approach--sets-and-sequences.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyONsnIKVOuY9bd5i2FY0JpR",
+      "authorship_tag": "ABX9TyMZ+D1lW/gqKiWoCJtPsin6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -115,12 +115,12 @@
       ],
       "metadata": {
         "id": "qikpFafHMZRp",
-        "outputId": "22d675ef-d84c-4284-ecbe-50541e11b08d",
+        "outputId": "2c3ef100-563e-4e72-b866-d534fec6c328",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "100 80.2M  100 80.2M    0     0  8090k      0  0:00:10  0:00:10 --:--:-- 16.7M\n"
+            "100 80.2M  100 80.2M    0     0  16.3M      0  0:00:04  0:00:04 --:--:-- 18.3M\n"
           ]
         },
         {
@@ -139,7 +139,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 2
         }
       ]
     },
@@ -151,12 +151,12 @@
       ],
       "metadata": {
         "id": "1P--z8OhM6ub",
-        "outputId": "943b2a54-4f7e-4caa-c10f-5607099ed503",
+        "outputId": "e0581ee3-7965-47ee-cc8b-9ec00d93be82",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "YMuEAvy2OQRY"
       },
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -240,12 +240,12 @@
       ],
       "metadata": {
         "id": "V6vA9z3ASbd3",
-        "outputId": "6c62a2cc-e7de-4bf6-8947-94a7c4ad92df",
+        "outputId": "a36aa99a-1657-480f-c024-02d1def23177",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,12 +281,12 @@
       ],
       "metadata": {
         "id": "nwyYSSmCTHml",
-        "outputId": "b99718a6-334f-46d1-bf96-09e6c521fadf",
+        "outputId": "9577ad09-a0d6-4e47-c096-2266ac462358",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,7 +296,7 @@
             "inputs.dtype: <dtype: 'string'>\n",
             "targets.shape: (32,)\n",
             "targets.dtype: <dtype: 'int32'>\n",
-            "inputs[0]: tf.Tensor(b'Cheesy script, cheesy one-liners. Timothy Hutton\\'s performance a \"little\" over the top. David Duchovny still seemed to be stuck in his Fox Mulder mode. No chemistry with his large-lipped female co-star.He needs Gillian Anderson to shine. He does not seem to have any talent of his own.', shape=(), dtype=string)\n",
+            "inputs[0]: tf.Tensor(b'This rip off of the 1984 hit \"Gremlins\" is quite possibly the biggest train wreck of a movie ever made. Even for a \\'B\\' grade movie, all other cheap horror movies on the same platform completely dwarf this movie in terms of plot, acting, and goodness.<br /><br />It begins with a random old security guard and the younger punky security guard whose name is of no importance. Why? Because a few minutes into the film he walks into the \\'forbidden\\' safe, and is killed whilst living out his fantasy of being a rock star in a cheap pub.<br /><br />This is just an appetizer for the scat-filled main course. The main character, KEVIN, struggles various times to prove himself as more than a total pussy. Perhaps he succeeds within the film, but to the audience he proves himself as nothing more than a bad actor. Kevin gets himself a job with the old security guard, and is guided through his security shift in the (wait for it) abandoned studio lot. Yes why bother making a set when you can just use the studio itself. Back to the film. Kevin somehow opens the forbidden safe and releases the Hobgoblins. The Hobgoblins force people to live out their wildest fantasies and then kill them for some reason. They must be returned before sunrise or else...or else what? Exactly.<br /><br />Other characters include Kevin\\'s \\'macho\\' army friend NICK, Nick\\'s \\'woman\\' DAPHNE whose character has no more substance than a bitch-slut attitude and prostitute worthy outfits. There is Kevin\\'s manipulative and \\'reserved\\' girlfriend AMY, whose deepest desire is apparently to be a badly portrayed Cher look-alike with fishnet stockings with a pair of blue grandma underpants on top.. Don\\'t ask me how that works. Quite possibly the most entertaining character of all is KYLE. How such groups of friends are made is up for question. Kyle is a perverted creep who can\\'t go an hour without self-stimulating. His hobbies include calling up sex-chat lines from other people\\'s houses and most likely sniffing underwear.<br /><br />The story unfolds as the heroes search for the Hobgoblins: knee-high creatures (aka. hand puppets) which, for some reason, attempt to travel no further than the borders of the local neighborhood. Each of the characters eventually lives out their wildest fantasy which never has anything to do with having millions of dollars... or the film having a big budget.<br /><br />WARNING SPOILERS AHEAD: The twist at the end of this movie will leave the watcher wondering \"What?\". The Hobgoblins are returned to the safe by...their own free will. Perhaps they lost patience waiting for sunrise to wreak havoc, or perhaps the story-writers got writer\\'s cramp and decided not to worry about the ending. Upon returning to the safe, the old security guard reveals \"What he learned in the military\" and detonates explosives which destroys the safe, signaling the end of the evil Hobgoblins and the end of this roller coaster ride; better fitted to a ride on an escalator.<br /><br />The sheer badness of this film is enough to send someone to tears. If you plan to watch it, I recommend a few alcoholic drinks beforehand to take any serious consideration of the film out of mind.', shape=(), dtype=string)\n",
             "targets[0]: tf.Tensor(0, shape=(), dtype=int32)\n"
           ]
         }
@@ -323,10 +323,330 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "The simplest way to encode a piece of text for processing by a machine learning\n",
+        "model is to discard order and treat it as a set (a “bag”) of tokens. \n",
+        "\n",
+        "You could either look at individual words (unigrams), or try to recover some local order information by looking at groups of consecutive token (N-grams)."
       ],
       "metadata": {
         "id": "lY-0GpLxTv8K"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Single words with binary encoding"
+      ],
+      "metadata": {
+        "id": "_3pyKsnQS-wX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "If you use a bag of single words, the sentence “the cat sat on the mat” becomes-\n",
+        "\n",
+        "```python\n",
+        "{\"cat\", \"mat\", \"on\", \"sat\", \"the\"}\n",
+        "```\n",
+        "\n",
+        "The main advantage of this encoding is that you can represent an entire text as a single\n",
+        "vector, where each entry is a presence indicator for a given word. \n",
+        "\n",
+        "For instance,\n",
+        "using binary encoding (multi-hot), you’d encode a text as a vector with as many\n",
+        "dimensions as there are words in your vocabulary—with 0s almost everywhere and\n",
+        "some 1s for dimensions that encode words present in the text.\n",
+        "\n",
+        "First, let’s process our raw text datasets with a TextVectorization layer so that they yield multi-hot encoded binary word vectors."
+      ],
+      "metadata": {
+        "id": "UVs_HWi8TCEH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Limit the vocabulary to the 20,000 most frequent words.In general, 20,000 is the right vocabulary size for text classification.\n",
+        "text_vectorization = layers.TextVectorization(max_tokens=20000, output_mode=\"multi_hot\") # Encode the output tokens as multi-hot binary vectors\n",
+        "\n",
+        "# Prepare a dataset that only yields raw text inputs (no labels).\n",
+        "text_only_train_ds = train_ds.map(lambda x, y: x)\n",
+        "\n",
+        "# Use that dataset to index the dataset vocabulary via the adapt() method\n",
+        "text_vectorization.adapt(text_only_train_ds)"
+      ],
+      "metadata": {
+        "id": "u72_BiqgTjIX"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Prepare processed versions of our training, validation, and test dataset.\n",
+        "binary_1gram_train_ds = train_ds.map(lambda x, y: (text_vectorization(x), y), num_parallel_calls=4)\n",
+        "binary_1gram_val_ds = val_ds.map(lambda x, y: (text_vectorization(x), y), num_parallel_calls=4)\n",
+        "binary_1gram_test_ds = test_ds.map(lambda x, y: (text_vectorization(x), y), num_parallel_calls=4)"
+      ],
+      "metadata": {
+        "id": "3a29FT2wUsMp"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "You can try to inspect the output of one of these datasets."
+      ],
+      "metadata": {
+        "id": "eI1_gNfuVOst"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for inputs, targets in binary_1gram_train_ds:\n",
+        "  print(\"inputs.shape:\", inputs.shape)\n",
+        "  print(\"inputs.dtype:\", inputs.dtype)\n",
+        "  print(\"targets.shape:\", targets.shape)\n",
+        "  print(\"targets.dtype:\", targets.dtype)\n",
+        "  print(\"inputs[0]:\", inputs[0])\n",
+        "  print(\"targets[0]:\", targets[0])\n",
+        "  break"
+      ],
+      "metadata": {
+        "id": "JwH8YzizVPLE",
+        "outputId": "05888b2f-0d66-4159-a22d-056b7a99b5f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "inputs.shape: (32, 20000)\n",
+            "inputs.dtype: <dtype: 'float32'>\n",
+            "targets.shape: (32,)\n",
+            "targets.dtype: <dtype: 'int32'>\n",
+            "inputs[0]: tf.Tensor([1. 1. 1. ... 0. 0. 0.], shape=(20000,), dtype=float32)\n",
+            "targets[0]: tf.Tensor(0, shape=(), dtype=int32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Next, let’s write a reusable model-building function that we’ll use in all of our experiments."
+      ],
+      "metadata": {
+        "id": "DZAZyiSdWgGH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_model(max_tokens=20000, hidden_dim=16):\n",
+        "  inputs = keras.Input(shape=(max_tokens, ))\n",
+        "  x = layers.Dense(hidden_dim, activation=\"relu\")(inputs)\n",
+        "  x = layers.Dropout(0.5)(x)\n",
+        "  outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
+        "  model = keras.Model(inputs, outputs)\n",
+        "  model.compile(optimizer=\"rmsprop\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
+        "  return model"
+      ],
+      "metadata": {
+        "id": "CTrGV_KEWjKt"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Finally, let’s train and test our model."
+      ],
+      "metadata": {
+        "id": "Ghqvx59tWgzS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = get_model()\n",
+        "model.summary()"
+      ],
+      "metadata": {
+        "id": "1TCKuhVzXfBK",
+        "outputId": "81aec9a3-3ec9-41ae-caed-1d6a23b055bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"model\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " input_1 (InputLayer)        [(None, 20000)]           0         \n",
+            "                                                                 \n",
+            " dense (Dense)               (None, 16)                320016    \n",
+            "                                                                 \n",
+            " dropout (Dropout)           (None, 16)                0         \n",
+            "                                                                 \n",
+            " dense_1 (Dense)             (None, 1)                 17        \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 320,033\n",
+            "Trainable params: 320,033\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "callbacks = [keras.callbacks.ModelCheckpoint(\"binary_1gram.keras\", save_best_only=True)]"
+      ],
+      "metadata": {
+        "id": "sxWAQKTrXlYr"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We call `cache()` on the datasets to cache them in memory: this way, we will only do the preprocessing once, during the first epoch, and we’ll reuse the preprocessed texts for the following epochs. This can only be done if the data is small enough to fit in memory."
+      ],
+      "metadata": {
+        "id": "j-3ER_JvX4Zq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.fit(binary_1gram_train_ds.cache(),\n",
+        "          validation_data=binary_1gram_val_ds.cache(),\n",
+        "          epochs=10,\n",
+        "          callbacks=callbacks)"
+      ],
+      "metadata": {
+        "id": "N78xCH3bX9wj",
+        "outputId": "1f36e7a5-7277-41f4-caf4-46f0d5104978",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "625/625 [==============================] - 18s 26ms/step - loss: 0.3967 - accuracy: 0.8352 - val_loss: 0.3001 - val_accuracy: 0.8804\n",
+            "Epoch 2/10\n",
+            "625/625 [==============================] - 7s 11ms/step - loss: 0.2655 - accuracy: 0.9009 - val_loss: 0.3007 - val_accuracy: 0.8848\n",
+            "Epoch 3/10\n",
+            "625/625 [==============================] - 7s 11ms/step - loss: 0.2361 - accuracy: 0.9197 - val_loss: 0.3113 - val_accuracy: 0.8894\n",
+            "Epoch 4/10\n",
+            "625/625 [==============================] - 6s 10ms/step - loss: 0.2214 - accuracy: 0.9257 - val_loss: 0.3351 - val_accuracy: 0.8880\n",
+            "Epoch 5/10\n",
+            "625/625 [==============================] - 6s 9ms/step - loss: 0.2177 - accuracy: 0.9299 - val_loss: 0.3378 - val_accuracy: 0.8902\n",
+            "Epoch 6/10\n",
+            "625/625 [==============================] - 5s 8ms/step - loss: 0.2155 - accuracy: 0.9319 - val_loss: 0.3459 - val_accuracy: 0.8912\n",
+            "Epoch 7/10\n",
+            "625/625 [==============================] - 5s 8ms/step - loss: 0.2030 - accuracy: 0.9375 - val_loss: 0.3664 - val_accuracy: 0.8860\n",
+            "Epoch 8/10\n",
+            "625/625 [==============================] - 6s 10ms/step - loss: 0.2073 - accuracy: 0.9380 - val_loss: 0.3565 - val_accuracy: 0.8898\n",
+            "Epoch 9/10\n",
+            "625/625 [==============================] - 5s 9ms/step - loss: 0.2039 - accuracy: 0.9378 - val_loss: 0.3739 - val_accuracy: 0.8882\n",
+            "Epoch 10/10\n",
+            "625/625 [==============================] - 6s 9ms/step - loss: 0.2006 - accuracy: 0.9391 - val_loss: 0.3814 - val_accuracy: 0.8874\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f30d38eb1d0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = keras.models.load_model(\"binary_1gram.keras\")\n",
+        "print(f\"Test acc: {model.evaluate(binary_1gram_test_ds)[1]:.3f}\")"
+      ],
+      "metadata": {
+        "id": "WcyU9pgcYVuU",
+        "outputId": "69e5e2c1-0c3c-464c-8900-d2e6990b9a1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "782/782 [==============================] - 10s 13ms/step - loss: 0.2949 - accuracy: 0.8854\n",
+            "Test acc: 0.885\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This gets us to a test accuracy of 89.2%: not bad! Note that in this case, since the dataset\n",
+        "is a balanced two-class classification dataset (there are as many positive samples as\n",
+        "negative samples), the “naive baseline” we could reach without training an actual model\n",
+        "would only be 50%. \n",
+        "\n",
+        "Meanwhile, the best score that can be achieved on this dataset\n",
+        "without leveraging external data is around 95% test accuracy."
+      ],
+      "metadata": {
+        "id": "IWLplN1yYoRx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Bigrams with binary encoding"
+      ],
+      "metadata": {
+        "id": "pglJ08BIYx2R"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "-nbJNwsuY166"
       }
     }
   ]
