--- a/deep-learning-with-python-by-francois-chollet/11-deep-learning-for-text/01_words_representing_approach_sets_and_sequences.ipynb
+++ b/deep-learning-with-python-by-francois-chollet/11-deep-learning-for-text/01_words_representing_approach_sets_and_sequences.ipynb
@@ -6,7 +6,7 @@
       "name": "01-words-representing-approach--sets-and-sequences.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNgKas18ADGD0hIYQ4dh/e1",
+      "authorship_tag": "ABX9TyOlHiZE2BkmYM8lK+xq7ATg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -115,7 +115,7 @@
       ],
       "metadata": {
         "id": "qikpFafHMZRp",
-        "outputId": "acac33fe-d304-475b-90fe-ed1f00ca3792",
+        "outputId": "d70f8226-ecc4-47f8-fac0-d00c6557ae08",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -128,7 +128,7 @@
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "100 80.2M  100 80.2M    0     0  44.6M      0  0:00:01  0:00:01 --:--:-- 44.6M\n"
+            "100 80.2M  100 80.2M    0     0  20.7M      0  0:00:03  0:00:03 --:--:-- 20.7M\n"
           ]
         },
         {
@@ -151,7 +151,7 @@
       ],
       "metadata": {
         "id": "1P--z8OhM6ub",
-        "outputId": "7d8e5c4c-7a9f-41fc-cee8-872125f70c84",
+        "outputId": "98667932-95d6-4949-943f-9de6740b23c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "YMuEAvy2OQRY"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -240,12 +240,12 @@
       ],
       "metadata": {
         "id": "V6vA9z3ASbd3",
-        "outputId": "0d2675e1-962e-4f72-ea47-163ada5c349a",
+        "outputId": "a16525f3-1b40-4ab0-fcdf-02a2ecff6efb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,12 +281,12 @@
       ],
       "metadata": {
         "id": "nwyYSSmCTHml",
-        "outputId": "444c8a2a-44fb-4c77-f14a-7ea5de1d6b09",
+        "outputId": "853345ed-8035-44cd-92da-bda533480407",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,8 +296,8 @@
             "inputs.dtype: <dtype: 'string'>\n",
             "targets.shape: (32,)\n",
             "targets.dtype: <dtype: 'int32'>\n",
-            "inputs[0]: tf.Tensor(b\"Dreaming of Julia was the title of the original script, and was filmed in the summer of 2000 in Santo Domingo Republica Dominicana. To release the picture they change the original name to Cuba Libre. The director's cut was 3 and a half hours long. It was released on the festival of Bangkok in Thailand. It was the second film of Gael Garc\\xc3\\xada Bernal (the first was Amores Perros)<br /><br />and the first of Juan Gerard as a Director. In the poster the names of Diana Bracho and Cecilia Suares does not appear. Diana plays the grandmother and Cecilia the mother of the kid. They are great actresses and they keep the story together specially Diana. Check her out in other things you would be surprised.\", shape=(), dtype=string)\n",
-            "targets[0]: tf.Tensor(1, shape=(), dtype=int32)\n"
+            "inputs[0]: tf.Tensor(b\"This movie has beautiful scenery. Unfortunately it has no plot. In order to have a plot there must be a conflict. This movie had none. It spent two hours painting a beautiful scene and failed to ever place any activity in it. The picture tries to be artistic but fails to pay attentions to the fundamentals of story telling.<br /><br />If you love Montana scenery and fly fishing you will find some value in this film just don't expect a story. There isn't one.\", shape=(), dtype=string)\n",
+            "targets[0]: tf.Tensor(0, shape=(), dtype=int32)\n"
           ]
         }
       ]
@@ -379,7 +379,7 @@
       "metadata": {
         "id": "u72_BiqgTjIX"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -393,7 +393,7 @@
       "metadata": {
         "id": "3a29FT2wUsMp"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -424,7 +424,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,7 +464,7 @@
       "metadata": {
         "id": "CTrGV_KEWjKt"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -489,7 +489,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -524,7 +524,7 @@
       "metadata": {
         "id": "sxWAQKTrXlYr"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -551,7 +551,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,7 +604,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -676,7 +676,7 @@
       "metadata": {
         "id": "40n99NGIWHlr"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -690,7 +690,7 @@
       "metadata": {
         "id": "OQWSvXRFWdfG"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -706,7 +706,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -750,7 +750,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -803,7 +803,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -898,7 +898,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -942,7 +942,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -995,7 +995,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1039,7 +1039,7 @@
       "metadata": {
         "id": "je-t-x9PcZaR"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1065,7 +1065,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1088,10 +1088,197 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "As we know that word order matters: **manual engineering of order-based features, such as bigrams, yields a nice accuracy boost**. \n",
+        "\n",
+        "Now remember: **the history of deep learning is that of a move away from manual feature engineering, toward letting models learn their own features from exposure to data alone.**\n",
+        "\n",
+        "What if, instead of manually crafting order-based features, we exposed the model to raw word sequences and let it figure out such features on its own? \n",
+        "\n",
+        "**This is what sequence models are about.**\n",
+        "\n",
+        "To implement a sequence model, you’d start by representing your input samples as\n",
+        "sequences of integer indices (one integer standing for one word). Then, you’d map each integer to a vector to obtain vector sequences. \n",
+        "\n",
+        "Finally, you’d feed these sequences of vectors into a stack of layers that could cross-correlate features from adjacent\n",
+        "vectors, such as a 1D convnet, a RNN, or a Transformer.\n",
+        "\n",
+        "For some time around 2016–2017, bidirectional RNNs (in particular, bidirectional\n",
+        "LSTMs) were considered to be the state of the art for sequence modeling.\n",
+        "\n",
+        "However, nowadays sequence modeling is almost universally done with Transformers.\n",
+        "\n",
+        "Oddly, one-dimensional convnets were never very popular in NLP, even though, a residual stack of depthwise-separable 1D convolutions can often achieve comparable performance to a bidirectional\n",
+        "LSTM, at a greatly reduced computational cost."
       ],
       "metadata": {
         "id": "LIwdLUjNdlQr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Preparing datasets for sequences"
+      ],
+      "metadata": {
+        "id": "s4JUN4qkQY9T"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "First, let’s prepare datasets that return integer sequences."
+      ],
+      "metadata": {
+        "id": "h7T3QwANQfoS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max_length = 600\n",
+        "max_tokens = 20000\n",
+        "\n",
+        "# Prepare a dataset that only yields raw text inputs (no labels).\n",
+        "text_only_train_ds = train_ds.map(lambda x, y: x)\n",
+        "\n",
+        "# This is a reasonable choice, since the average review length is 233 words, and only 5% of reviews are longer than 600 words.\n",
+        "text_vectorization = layers.TextVectorization(max_tokens=max_tokens,\n",
+        "                                              output_mode=\"int\",\n",
+        "                                              output_sequence_length=max_length)\n",
+        "text_vectorization.adapt(text_only_train_ds)\n",
+        "\n",
+        "int_train_ds = train_ds.map(lambda x, y: (text_vectorization(x), y), num_parallel_calls=4)\n",
+        "int_val_ds = val_ds.map(lambda x, y: (text_vectorization(x), y), num_parallel_calls=4)\n",
+        "int_test_ds = test_ds.map(lambda x, y: (text_vectorization(x), y), num_parallel_calls=4)"
+      ],
+      "metadata": {
+        "id": "eKQRxZI9Qmk2"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###A simple bidirectional LSTM"
+      ],
+      "metadata": {
+        "id": "4S4HkAW2aue8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The simplest way to convert our integer sequences to vector\n",
+        "sequences is to one-hot encode the integers (each dimension would represent one\n",
+        "possible term in the vocabulary). On top of these one-hot vectors, we’ll add a simple bidirectional LSTM."
+      ],
+      "metadata": {
+        "id": "EFPpHO9zR6_5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# One input is a sequence of integers\n",
+        "inputs = keras.Input(shape=(None, ), dtype=\"int64\")\n",
+        "# Encode the integers into binary 20,000-dimensional vectors\n",
+        "embedded = tf.one_hot(inputs, depth=max_tokens)\n",
+        "# add a bidirectional LSTM\n",
+        "x = layers.Bidirectional(layers.LSTM(32))(embedded)\n",
+        "x = layers.Dropout(0.5)(x)\n",
+        "outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
+        "\n",
+        "model = keras.Model(inputs, outputs)\n",
+        "model.compile(optimizer=\"rmsprop\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
+        "model.summary()"
+      ],
+      "metadata": {
+        "id": "prcYoNX_R8gz",
+        "outputId": "312bbd77-af7e-49a9-b0e3-86f738133987",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"model\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " input_1 (InputLayer)        [(None, None)]            0         \n",
+            "                                                                 \n",
+            " tf.one_hot (TFOpLambda)     (None, None, 20000)       0         \n",
+            "                                                                 \n",
+            " bidirectional (Bidirectiona  (None, 64)               5128448   \n",
+            " l)                                                              \n",
+            "                                                                 \n",
+            " dropout (Dropout)           (None, 64)                0         \n",
+            "                                                                 \n",
+            " dense (Dense)               (None, 1)                 65        \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 5,128,513\n",
+            "Trainable params: 5,128,513\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now, let’s train our model."
+      ],
+      "metadata": {
+        "id": "BWjx88yOUA_0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "callbacks = [keras.callbacks.ModelCheckpoint(\"one_hot_bidir_lstm.keras\", save_best_only=True)]\n",
+        "\n",
+        "model.fit(int_train_ds, validation_data=int_val_ds, epochs=10, callbacks=callbacks)\n",
+        "\n",
+        "model = keras.model.load_model(\"one_hot_bidir_lstm.keras\")\n",
+        "print(f\"Test accuracy: {model.evaluate(int_test_ds)[1]:.3f}\")"
+      ],
+      "metadata": {
+        "id": "s-tQ3kFlUBjO",
+        "outputId": "6c9d3ac1-7489-4398-f482-37cdf4351329",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            " 46/625 [=>............................] - ETA: 3:32:57 - loss: 0.6931 - accuracy: 0.5088"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A first observation: this model trains very slowly, especially compared to the lightweight model of the previous section. This is because our inputs are quite large: each input sample is encoded as a matrix of size `(600, 20000) (600 words per sample, 20,000 possible words)`. That’s `12,000,000` floats for a single movie review. Our bidirectional LSTM has a lot of work to do.\n",
+        "\n",
+        "Second, the model only gets to `87%` test accuracy—it doesn’t perform nearly as well as our (very fast) binary unigram model.\n",
+        "\n",
+        "Clearly, using one-hot encoding to turn words into vectors, which was the simplest thing we could do, wasn’t a great idea. There’s a better way: **word embeddings**."
+      ],
+      "metadata": {
+        "id": "U-hyjFg1XdEN"
       }
     }
   ]
