--- a/deep-learning-with-python-by-francois-chollet/11-deep-learning-for-text/01_words_representing_approach_sets_and_sequences.ipynb
+++ b/deep-learning-with-python-by-francois-chollet/11-deep-learning-for-text/01_words_representing_approach_sets_and_sequences.ipynb
@@ -6,7 +6,7 @@
       "name": "01-words-representing-approach--sets-and-sequences.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOlHiZE2BkmYM8lK+xq7ATg",
+      "authorship_tag": "ABX9TyMD2WnClHW22EAlbuLXI1Uo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,7 +89,7 @@
       "metadata": {
         "id": "qqyixaVcLwJ_"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +120,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +245,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +286,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1154,7 +1154,7 @@
       "metadata": {
         "id": "eKQRxZI9Qmk2"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1200,7 +1200,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1280,6 +1280,49 @@
       "metadata": {
         "id": "U-hyjFg1XdEN"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Word embeddings"
+      ],
+      "metadata": {
+        "id": "eWCQTO1UDlRH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Word embeddings are vector representations of words that map human language into a structured geometric space.\n",
+        "\n",
+        "There are two ways to obtain word embeddings:\n",
+        "\n",
+        "- Learn word embeddings jointly with the main task using embeddings layer\n",
+        "- Load pretrained word embeddings into your model"
+      ],
+      "metadata": {
+        "id": "7EoCwzVsD_20"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Learn word embeddings with embedding layer"
+      ],
+      "metadata": {
+        "id": "DkjHH29gEndf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "nLtl5qpwDvor"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
